<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">LearnFromHome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummydesc">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem..</string>
    <string name="dummydesc1">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum..</string>
    <string name="dummydesc2">Lorem Ipsum Lorem Ipsum </string>
    <string name="coming_soon">Coming Soon!!</string>
    <string name="live_chat">LIVE CHAT</string>
    <string name="better_on_web">Better on Web</string>
    <string name="go_offline">Go Offline</string>
    <string name="qna">QNA</string>
    <string name="raised_hand">Raised Hand</string>
    <string name="answered">Answered</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="id_no">ID NO</string>
    <string name="title">Title</string>
    <string name="opensans">OpenSans</string>
    <string name="todays_task">TODAYS TASK</string>
    <string name="see_all">See all</string>
    <string name="view_previous_assignments">View Previous Assignments</string>
    <string name="view_previous_exams">View Previous Exams</string>
    <string name="dumpText">Lorem Ipsum no inet dolor amet ipsum lorem</string>
    <string name="dumpText1">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem</string>
    <string name="dumpText2">Lorem Ipsum dolor sit amet, consectetur ad ferm entum, arcu a suscipit</string>
    <string name="search">SEARCH</string>
    <string name="last_exam_score">Last Exam Score</string>
    <string name="chat_avatar">Chat Avatar</string>
    <string name="live">LIVE</string>
    <string name="documents">DOCUMENTS</string>
    <string name="formulaes">FORMULAES</string>
    <string name="subject">SUBJECT</string>
    <string name="byTeacher"><![CDATA[By <b>Sneha Sharma</b> on <b>History</b>]]></string>
    <string name="studentavatar">StudentAvatar</string>
    <string name="download_scheme_unsupported">This demo app only supports downloading http streams</string>
    <string name="error_cleartext_not_permitted">Cleartext traffic not permitted</string>
    <string name="error_generic">Playback failed</string>
    <string name="error_unrecognized_abr_algorithm">Unrecognized ABR algorithm</string>
    <string name="error_unrecognized_stereo_mode">Unrecognized stereo mode</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="breaking_the_rules_of_mathematics">Breaking the rules of Mathematics</string>
</resources>