<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".TeacherFragment.TLiveFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_rounded"
            android:backgroundTint="@color/light_background"
            android:baselineAligned="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/video_img"
                    android:layout_width="64dp"
                    android:layout_height="40dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/live"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/video_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="2"
                    android:text="START"
                    android:textColor="@color/accent_black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/boy_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="2"
                    android:text="BOY"
                    android:textColor="@color/accent_black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/bcount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="@color/accent_black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/girl_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="2"
                    android:text="GIRL"
                    android:textColor="@color/accent_black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/gcount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="@color/accent_black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/total_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="2"
                    android:text="TOTAL"
                    android:textColor="@color/accent_black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tcount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="20"
                    android:textColor="@color/accent_black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,SmallSp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/whitebg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_rounded"
            android:backgroundTint="@color/light_background"
            android:baselineAligned="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:orientation="vertical"
                android:padding="8dp"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/live_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/live_chat"
                        android:textColor="@color/accent_black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/betterweb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="12sp"
                        android:text="@string/better_on_web"
                        android:textColor="@color/accent_black"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/goOffline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/go_offline"
                        android:textColor="@color/accent_black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/offlineSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="13dp"
                        android:checked="false" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/livechatImg"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:scaleType="fitCenter"
                android:src="@drawable/exo_icon_fastforward"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/whitebg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_rounded"
            android:backgroundTint="@color/light_background"
            android:baselineAligned="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/QNA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qna"
                android:textColor="@color/accent_black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/qnaimg"
                            android:layout_width="64dp"
                            android:layout_height="40dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/notifications"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/raisedH_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:lines="2"
                            android:text="11"
                            android:textColor="@color/accent_black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/raisedHand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="2"
                        android:text="@string/raised_hand"
                        android:textColor="@color/accent_black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ansimg"
                            android:layout_width="64dp"
                            android:layout_height="40dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/notifications"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/answer_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:lines="2"
                            android:text="11"
                            android:textColor="@color/accent_black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/answered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="2"
                        android:text="@string/answered"
                        android:textColor="@color/accent_black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/enable_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>